# motif-aware-core-periphery

./: CMakeLists.txt  build.sh
metric/: CMakeLists.txt  main.cpp  main.hpp  metric.hpp  node.cpp  node.hpp
metric/centrality/: CMakeLists.txt  degree.cpp  degree.hpp
metric/idealized/: CMakeLists.txt  README.md  idealized.hpp
metric/idealized/eq2/: CMakeLists.txt  eq2.cpp  eq2.hpp
metric/idealized/eq3/: CMakeLists.txt  eq3.cpp  eq3.hpp
metric/idealized/eq4/: CMakeLists.txt  eq4.cpp  eq4.hpp
metric/modularity/: CMakeLists.txt  modularity.cpp  modularity.hpp
metric/nmi/: CMakeLists.txt  nmi.cpp  nmi.hpp
network_analysis/: CMakeLists.txt  confusion-matrix.py  cpalgorithm.py  gml-to-el.cpp  largest-weakly-connected.py  postprocess-edgelist.cpp  to-gml.py
scripts/: all-cpalgorithm.sh  all-metric.sh  all-output.sh  merge-output-csv.sh  reference.sh
static_visualizer/: CMakeLists.txt  graphviz.cpp  main.cpp
